gcc-14.2.0/gcc/testsuite/gm2/iso/const/fail/castproctype.mod
version https://git-lfs.github.com/spec/v1
oid sha256:8c700597f46c0b703a3e8eb657f2d854e98d30ef8a13e06997480d8d0df31e5b
size 263
